# libinih-example

./: .travis.yml  Makefile.am  README.md  configure.ac
src/: inih-example.c  inih-example.h
